Ant Task (partial)
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@6 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -4,6 +4,7 @@
 htmlReport.titlePrefix=GMetrics Report
 htmlReport.reportTimestamp.label=Report timestamp:
 htmlReport.metricResults.title=Metric Results
+htmlReport.metricResults.notApplicable=N/A
 htmlReport.metricDescriptions.title=Metric Descriptions
 htmlReport.metricResults.nameHeading=Package/Class/Method
 htmlReport.metricDescriptions.nameHeading=Metric Name
