Support for outputFile and defaultOutputFile
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@11 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -15,9 +15,9 @@ ABC.description.html=The ABC metric measures size and complexity of source code.
 ABC.totalValue=ABC (total)
 ABC.averageValue=ABC (average)
 
-MethodSize.description.html=The MethodLineCount metric measures the number of lines in each method.
-MethodSize.totalValue=Method Line Count (total)
-MethodSize.averageValue=Method Line Count (average)
+MethodLineCount.description.html=The MethodLineCount metric measures the number of lines in each method.
+MethodLineCount.totalValue=Method Lines (total)
+MethodLineCount.averageValue=Method Lines (average)
 
 
 
