--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -1,21 +1,21 @@
 # Resource Bundle for GMetrics
 
 # HTML Report
-htmlReport.titlePrefix=GMetrics Report
-htmlReport.reportTimestamp.label=Report timestamp:
-htmlReport.metricResults.title=Metric Results
-htmlReport.metricResults.notApplicable=N/A
-htmlReport.metricDescriptions.title=Metric Descriptions
-htmlReport.metricResults.nameHeading=Package/Class/Method
-htmlReport.metricDescriptions.nameHeading=Metric Name
-htmlReport.metricDescriptions.descriptionHeading=Description
+basicHtmlReport.titlePrefix=GMetrics Report
+basicHtmlReport.reportTimestamp.label=Report timestamp:
+basicHtmlReport.metricResults.title=Metric Results
+basicHtmlReport.metricResults.notApplicable=N/A
+basicHtmlReport.metricDescriptions.title=Metric Descriptions
+basicHtmlReport.metricResults.nameHeading=Package/Class/Method
+basicHtmlReport.metricDescriptions.nameHeading=Metric Name
+basicHtmlReport.metricDescriptions.descriptionHeading=Description
 
 # Metrics
-ABC.description.html=The ABC metric measures size and complexity of source code. See ...
+ABC.description.html=Metric that measures size and complexity of source code. See <a href='http://c2.com/cgi/wiki?AbcMetric'>http://c2.com/cgi/wiki?AbcMetric</a>.
 ABC.totalValue=ABC (total)
 ABC.averageValue=ABC (average)
 
-MethodLineCount.description.html=The MethodLineCount metric measures the number of lines in each method.
+MethodLineCount.description.html=Metric that measures the number of lines in each method.
 MethodLineCount.totalValue=Method Lines (total)
 MethodLineCount.averageValue=Method Lines (average)
 
