--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -15,10 +15,13 @@ ABC.description.html=Metric that measures size and complexity of source code. Se
 ABC.totalValue=ABC (total)
 ABC.averageValue=ABC (average)
 
+ClassLineCount.description.html=Metric that measures the number of lines in each class or interface.
+ClassLineCount.totalValue=Class Lines (total)
+ClassLineCount.averageValue=Class Lines (average)
+
 MethodLineCount.description.html=Metric that measures the number of lines in each method.
 MethodLineCount.totalValue=Method Lines (total)
 MethodLineCount.averageValue=Method Lines (average)
-
 
 
 
