Rename totalValue to total; averageValue to average; delete value
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@23 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -12,16 +12,16 @@ basicHtmlReport.metricDescriptions.descriptionHeading=Description
 
 # Metrics
 ABC.description.html=Metric that measures size and complexity of source code. See <a href='http://c2.com/cgi/wiki?AbcMetric'>http://c2.com/cgi/wiki?AbcMetric</a>.
-ABC.totalValue=ABC (total)
-ABC.averageValue=ABC (average)
+ABC.total=ABC (total)
+ABC.average=ABC (average)
 
 ClassLineCount.description.html=Metric that measures the number of lines in each class or interface.
-ClassLineCount.totalValue=Class Lines (total)
-ClassLineCount.averageValue=Class Lines (average)
+ClassLineCount.total=Class Lines (total)
+ClassLineCount.average=Class Lines (average)
 
 MethodLineCount.description.html=Metric that measures the number of lines in each method.
-MethodLineCount.totalValue=Method Lines (total)
-MethodLineCount.averageValue=Method Lines (average)
+MethodLineCount.total=Method Lines (total)
+MethodLineCount.average=Method Lines (average)
 
 
 
