--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-    Generated from archetype; please customize.
--->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
@@ -9,7 +6,7 @@
 
     <groupId>org.gmetrics</groupId>
     <artifactId>GMetrics</artifactId>
-    <name>Example Project</name>
+    <name>GMetrics</name>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
