--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -11,15 +11,15 @@ basicHtmlReport.metricDescriptions.nameHeading=Metric Name
 basicHtmlReport.metricDescriptions.descriptionHeading=Description
 
 # Metrics
-ABC.description.html=Metric that measures size and complexity of source code. See <a href='http://c2.com/cgi/wiki?AbcMetric'>http://c2.com/cgi/wiki?AbcMetric</a>.
+ABC.description.html=Measures size and complexity of source code. See <a href='http://c2.com/cgi/wiki?AbcMetric'>http://c2.com/cgi/wiki?AbcMetric</a>.
 ABC.total=ABC (total)
 ABC.average=ABC (average)
 
-ClassLineCount.description.html=Metric that measures the number of lines in each class or interface.
+ClassLineCount.description.html=Measures the number of lines in each class or interface.
 ClassLineCount.total=Class Lines (total)
 ClassLineCount.average=Class Lines (average)
 
-MethodLineCount.description.html=Metric that measures the number of lines in each method.
+MethodLineCount.description.html=Measures the number of lines in each method.
 MethodLineCount.total=Method Lines (total)
 MethodLineCount.average=Method Lines (average)
 
