--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
     <groupId>org.gmetrics</groupId>
     <artifactId>GMetrics</artifactId>
     <name>GMetrics</name>
-    <version>0.1</version>
+    <version>0.1.1-SNAPSHOT</version>
     <description>
-        The Gmetrics project provides calculation and reporting of size and
+        The GMetrics project provides calculation and reporting of size and
         complexity metrics for Groovy source code.
     </description>
     <packaging>jar</packaging>
@@ -17,8 +17,7 @@
 
     <scm>
         <connection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk</connection>
-        <developerConnection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk
-        </developerConnection>
+        <developerConnection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk</developerConnection>
         <url>https://gmetrics.svn.sourceforge.net/svnroot/gmetrics</url>
     </scm>
 
@@ -28,7 +27,7 @@
             <artifactId>gmaven-runtime-1.6</artifactId>
             <version>1.0</version>
         </dependency>
-        
+
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
@@ -44,11 +43,48 @@
     </dependencies>
 
     <distributionManagement>
+        <snapshotRepository>
+            <id>sonatype-nexus-snapshots</id>
+            <name>Sonatype Nexus Snapshots</name>
+            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+
         <repository>
-            <id>sourceforge</id>
-            <url>scp://shell.sourceforge.net/home/groups/g/gm/gmetrics/htdocs/m2repo</url>
+             <id>sonatype-nexus-staging</id>
+             <name>Nexus Release Repository</name>
+             <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
         </repository>
     </distributionManagement>
+
+    <profiles>
+       <profile>
+         <id>release-sign-artifacts</id>
+         <activation>
+           <property>
+             <name>performRelease</name>
+             <value>true</value>
+           </property>
+         </activation>
+         <build>
+           <plugins>
+             <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-gpg-plugin</artifactId>
+               <version>1.0-alpha-4</version>
+               <executions>
+                 <execution>
+                   <id>sign-artifacts</id>
+                   <phase>verify</phase>
+                   <goals>
+                     <goal>sign</goal>
+                   </goals>
+                 </execution>
+               </executions>
+             </plugin>
+           </plugins>
+         </build>
+       </profile>
+    </profiles>
 
     <build>
         <plugins>
@@ -86,6 +122,15 @@
                     <descriptors>
                         <descriptor>src/assembly/assembly.xml</descriptor>
                     </descriptors>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.0-beta-7</version>
+                <configuration>
+                    <tagBase>https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/tags</tagBase>
                 </configuration>
             </plugin>
 
