--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.gmetrics</groupId>
     <artifactId>GMetrics</artifactId>
     <name>GMetrics</name>
-    <version>0.1</version>
+    <version>0.2-SNAPSHOT</version>
     <description>
         The GMetrics project provides calculation and reporting of size and
         complexity metrics for Groovy source code.
@@ -14,9 +14,9 @@
     <url>http://gmetrics.sourceforge.net/</url>
 
     <scm>
-        <connection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/tags/GMetrics-0.1</connection>
-        <developerConnection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/tags/GMetrics-0.1</developerConnection>
-        <url>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/tags/GMetrics-0.1</url>
+        <connection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk</connection>
+        <developerConnection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk</developerConnection>
+        <url>https://gmetrics.svn.sourceforge.net/svnroot/gmetrics</url>
     </scm>
 
     <dependencies>
@@ -128,7 +128,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.0-beta-7</version>
                 <configuration>
-                    <tagBase>https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/tags</tagBase>
+                    <tagBase>https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk</tagBase>
                 </configuration>
             </plugin>
 
