--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -11,13 +11,17 @@ basicHtmlReport.metricDescriptions.nameHeading=Metric Name
 basicHtmlReport.metricDescriptions.descriptionHeading=Description
 
 # Metrics
-ABC.description.html=Measures size and complexity of source code. See <a href='http://c2.com/cgi/wiki?AbcMetric'>http://c2.com/cgi/wiki?AbcMetric</a>.
+ABC.description.html=Measures size and complexity of source code. See the <a href='http://c2.com/cgi/wiki?AbcMetric'>Wikipedia entry for the ABC metric</a>.
 ABC.total=ABC (total)
 ABC.average=ABC (average)
 
 ClassLineCount.description.html=Measures the number of lines in each class or interface.
 ClassLineCount.total=Class Lines (total)
 ClassLineCount.average=Class Lines (average)
+
+CyclomaticComplexity.description.html=Measures the (McCabe) <em>Cyclomatic Complexity</em> of source code. See the <a href='http://en.wikipedia.org/wiki/Cyclomatic_complexity'>Wikipedia entry for Cyclomatic Complexity</a>.
+CyclomaticComplexity.total=Complexity (total)
+CyclomaticComplexity.average=Complexity (average)
 
 MethodLineCount.description.html=Measures the number of lines in each method.
 MethodLineCount.total=Method Lines (total)
