--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -12,20 +12,21 @@ basicHtmlReport.metricDescriptions.descriptionHeading=Description
 
 # Metrics
 ABC.description.html=Measures size and complexity of source code. See the <a href='http://c2.com/cgi/wiki?AbcMetric'>Wikipedia entry for the ABC metric</a>.
+ABC.description=Measures size and complexity of source code. See http://c2.com/cgi/wiki?AbcMetric
 ABC.total=ABC (total)
 ABC.average=ABC (average)
 
 ClassLineCount.description.html=Measures the number of lines in each class or interface.
+ClassLineCount.description=Measures the number of lines in each class or interface.
 ClassLineCount.total=Class Lines (total)
 ClassLineCount.average=Class Lines (average)
 
 CyclomaticComplexity.description.html=Measures the (McCabe) <em>Cyclomatic Complexity</em> of source code. See the <a href='http://en.wikipedia.org/wiki/Cyclomatic_complexity'>Wikipedia entry for Cyclomatic Complexity</a>.
+CyclomaticComplexity.description=Measures the (McCabe) Cyclomatic Complexity of source code. See http://en.wikipedia.org/wiki/Cyclomatic_complexity.
 CyclomaticComplexity.total=Complexity (total)
 CyclomaticComplexity.average=Complexity (average)
 
 MethodLineCount.description.html=Measures the number of lines in each method.
+MethodLineCount.description=Measures the number of lines in each method.
 MethodLineCount.total=Method Lines (total)
 MethodLineCount.average=Method Lines (average)
-
-
-
