Setup CodeNarc to run against GMetrics project source code
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@107 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.codenarc</groupId>
+            <artifactId>CodeNarc</artifactId>
+            <version>0.9</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <distributionManagement>
