--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -1,6 +1,6 @@
 # Resource Bundle for GMetrics
 
-# HTML Report
+# Base HTML Report
 basicHtmlReport.titlePrefix=GMetrics Report
 basicHtmlReport.reportTimestamp.label=Report timestamp:
 basicHtmlReport.metricResults.title=Metric Results
@@ -9,6 +9,12 @@ basicHtmlReport.metricDescriptions.title=Metric Descriptions
 basicHtmlReport.metricResults.nameHeading=Package/Class/Method
 basicHtmlReport.metricDescriptions.nameHeading=Metric Name
 basicHtmlReport.metricDescriptions.descriptionHeading=Description
+
+# Single-Series HTML Report
+singleSeriesHtmlReport.reportTimestamp.label = Report timestamp:
+singleSeriesHtmlReport.packageHeading = Package
+singleSeriesHtmlReport.classHeading = Class
+singleSeriesHtmlReport.methodHeading = Method
 
 # Metrics
 ABC.description.html=Measures size and complexity of source code. See the <a href='http://c2.com/cgi/wiki?AbcMetric'>Wikipedia entry for the ABC metric</a>.
