--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,9 @@
     <url>http://gmetrics.sourceforge.net/</url>
 
     <scm>
-        <connection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk</connection>
-        <developerConnection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk</developerConnection>
-        <url>https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/trunk</url>
+        <connection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/tags/GMetrics-0.3</connection>
+        <developerConnection>scm:svn:https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/tags/GMetrics-0.3</developerConnection>
+        <url>https://gmetrics.svn.sourceforge.net/svnroot/gmetrics/tags/GMetrics-0.3</url>
     </scm>
 
     <dependencies>
@@ -112,8 +112,8 @@
                <executions>
                  <execution>
                    <goals>
-                      <goal>generateStubs</goal>
-                       <goal>generateTestStubs</goal>
+                      <!--<goal>generateStubs</goal>-->
+                      <!--<goal>generateTestStubs</goal>-->
                       <goal>compile</goal>
                       <goal>testCompile</goal>
                    </goals>
