[maven-release-plugin] prepare for next development iteration
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@136 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>org.gmetrics</groupId>
     <artifactId>GMetrics</artifactId>
     <name>GMetrics</name>
-    <version>0.3</version>
+    <version>0.4-SNAPSHOT</version>
     <description>
         The GMetrics project provides calculation and reporting of size and
         complexity metrics for Groovy source code.
