--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -32,6 +32,11 @@ CyclomaticComplexity.description=Measures the (McCabe) Cyclomatic Complexity of 
 CyclomaticComplexity.total=Complexity (total)
 CyclomaticComplexity.average=Complexity (average)
 
+MethodCount.description.html=Measures the number of methods within each class.
+MethodCount.description=Measures the number of methods within each class.
+MethodCount.total=Methods (total)
+MethodCount.average=Methods (average)
+
 MethodLineCount.description.html=Measures the number of lines in each method.
 MethodLineCount.description=Measures the number of lines in each method.
 MethodLineCount.total=Method Lines (total)
