Use Sonatype oss-parent POM
git-svn-id: http://svn.code.sf.net/p/gmetrics/code/trunk@159 316bb773-894d-4c1b-afab-fbf10aed1fe6

--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,13 @@
     <artifactId>GMetrics</artifactId>
     <name>GMetrics</name>
     <version>0.4-SNAPSHOT</version>
+
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+      </parent>
+
     <description>
         The GMetrics project provides calculation and reporting of size and
         complexity metrics for Groovy source code.
@@ -54,20 +61,6 @@
 
     </dependencies>
 
-    <distributionManagement>
-        <snapshotRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <name>Sonatype Nexus Snapshots</name>
-            <url>http://oss.sonatype.org/content/repositories/snapshots</url>
-        </snapshotRepository>
-
-        <repository>
-             <id>sonatype-nexus-staging</id>
-             <name>Nexus Release Repository</name>
-             <url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-        </repository>
-    </distributionManagement>
-
     <profiles>
        <profile>
          <id>release-sign-artifacts</id>
@@ -79,6 +72,7 @@
          </activation>
          <build>
            <plugins>
+<!--
              <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
@@ -93,6 +87,7 @@
                  </execution>
                </executions>
              </plugin>
+-->
            </plugins>
          </build>
        </profile>
