--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -16,14 +16,21 @@ singleSeriesHtmlReport.packageHeading = Package
 singleSeriesHtmlReport.classHeading = Class
 singleSeriesHtmlReport.methodHeading = Method
 
+#-----------------------------------------------------------------------------------------
 # Metrics
+#-----------------------------------------------------------------------------------------
 ABC.description.html=Measures size and complexity of source code. See the <a href='http://c2.com/cgi/wiki?AbcMetric'>Wikipedia entry for the ABC metric</a>.
 ABC.description=Measures size and complexity of source code. See http://c2.com/cgi/wiki?AbcMetric
 ABC.total=ABC (total)
 ABC.average=ABC (average)
 
-ClassLineCount.description.html=Measures the number of lines in each class or interface.
-ClassLineCount.description=Measures the number of lines in each class or interface.
+ClassCount.description.html=Counts the number classes within each package.
+ClassCount.description=Counts the number classes within each package.
+ClassCount.total=Classes (total)
+ClassCount.average=Classes (average)
+
+ClassLineCount.description.html=Counts the number of lines in each class or interface.
+ClassLineCount.description=Counts the number of lines in each class or interface.
 ClassLineCount.total=Class Lines (total)
 ClassLineCount.average=Class Lines (average)
 
@@ -32,12 +39,12 @@ CyclomaticComplexity.description=Measures the (McCabe) Cyclomatic Complexity of 
 CyclomaticComplexity.total=Complexity (total)
 CyclomaticComplexity.average=Complexity (average)
 
-MethodCount.description.html=Measures the number of methods within each class.
-MethodCount.description=Measures the number of methods within each class.
+MethodCount.description.html=Counts the number of methods within each class.
+MethodCount.description=Counts the number of methods within each class.
 MethodCount.total=Methods (total)
 MethodCount.average=Methods (average)
 
-MethodLineCount.description.html=Measures the number of lines in each method.
-MethodLineCount.description=Measures the number of lines in each method.
+MethodLineCount.description.html=Counts the number of lines in each method.
+MethodLineCount.description=Counts the number of lines in each method.
 MethodLineCount.total=Method Lines (total)
 MethodLineCount.average=Method Lines (average)
