--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
+            <version>3.8.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -218,6 +218,12 @@
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.3</version>
+                <configuration>
+                  <formats>
+                    <format>html</format>
+                    <format>xml</format>
+                  </formats>
+                </configuration>
             </plugin>
 
             <plugin>
