--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -34,6 +34,11 @@ ClassLineCount.description=Counts the number of lines in each class or interface
 ClassLineCount.total=Class Lines (total)
 ClassLineCount.average=Class Lines (average)
 
+CoberturaLineCoverage.description.html=Measures code coverage by line from a <em>Cobertura</em> XML file.
+CoberturaLineCoverage.description=Measures code coverage by line from a Cobertura XML file.
+CoberturaLineCoverage.total=Coverage (total)
+CoberturaLineCoverage.average=Coverage (average)
+
 CyclomaticComplexity.description.html=Measures the (McCabe) <em>Cyclomatic Complexity</em> of source code. See the <a href='http://en.wikipedia.org/wiki/Cyclomatic_complexity'>Wikipedia entry for Cyclomatic Complexity</a>.
 CyclomaticComplexity.description=Measures the (McCabe) Cyclomatic Complexity of source code. See http://en.wikipedia.org/wiki/Cyclomatic_complexity.
 CyclomaticComplexity.total=Complexity (total)
