--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -34,10 +34,15 @@ ClassLineCount.description=Counts the number of lines in each class or interface
 ClassLineCount.total=Class Lines (total)
 ClassLineCount.average=Class Lines (average)
 
+CoberturaBranchCoverage.description.html=Measures code coverage of branches (conditionals) from a <em>Cobertura</em> XML file.
+CoberturaBranchCoverage.description=Measures code coverage of branches (conditionals) from a Cobertura XML file.
+CoberturaBranchCoverage.total=Branch Coverage (total)
+CoberturaBranchCoverage.average=Branch Coverage (average)
+
 CoberturaLineCoverage.description.html=Measures code coverage by line from a <em>Cobertura</em> XML file.
 CoberturaLineCoverage.description=Measures code coverage by line from a Cobertura XML file.
-CoberturaLineCoverage.total=Coverage (total)
-CoberturaLineCoverage.average=Coverage (average)
+CoberturaLineCoverage.total=Line Coverage (total)
+CoberturaLineCoverage.average=Line Coverage (average)
 
 CyclomaticComplexity.description.html=Measures the (McCabe) <em>Cyclomatic Complexity</em> of source code. See the <a href='http://en.wikipedia.org/wiki/Cyclomatic_complexity'>Wikipedia entry for Cyclomatic Complexity</a>.
 CyclomaticComplexity.description=Measures the (McCabe) Cyclomatic Complexity of source code. See http://en.wikipedia.org/wiki/Cyclomatic_complexity.
