--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -38,13 +38,15 @@ CoberturaBranchCoverage.description.html=Measures code coverage of branches (con
 CoberturaBranchCoverage.description=Measures code coverage of branches (conditionals) from a Cobertura XML file.
 CoberturaBranchCoverage.total=Branch Coverage (total)
 CoberturaBranchCoverage.average=Branch Coverage (average)
+CoberturaBranchCoverage.formatter=org.gmetrics.formatter.PercentageFormatter
 
 CoberturaLineCoverage.description.html=Measures code coverage by line from a <em>Cobertura</em> XML file.
 CoberturaLineCoverage.description=Measures code coverage by line from a Cobertura XML file.
 CoberturaLineCoverage.total=Line Coverage (total)
 CoberturaLineCoverage.average=Line Coverage (average)
+CoberturaLineCoverage.formatter=org.gmetrics.formatter.PercentageFormatter
 
-CRAP.description.html=Measures the C.R.A.P. (Change Risk Anti-Patterns) score. It is designed to analyze and predict the amount of effort, pain, and time required to maintain an existing body of code. Given a Java method m, C.R.A.P. for m is calculated as follows: <em>C.R.A.P.(m) = comp(m)^2 * (1 – cov(m)/100)^3 + comp(m)</em>. Where <em>comp(m)</em> is the cyclomatic complexity of method m, and <em>cov(m)</em> is the test code coverage provided by automated tests. See <a href="http://www.artima.com/weblogs/viewpost.jsp?thread=210575">Original blog post descripting the CRAP metric</a>.
+CRAP.description.html=Measures the C.R.A.P. (Change Risk Anti-Patterns) score. It is designed to analyze and predict the amount of effort, pain, and time required to maintain an existing body of code. Given a Java method m, C.R.A.P. for m is calculated as follows: <em>C.R.A.P.(m) = comp(m)^2 * (1 – cov(m)/100)^3 + comp(m)</em>. Where <em>comp(m)</em> is the cyclomatic complexity of method m, and <em>cov(m)</em> is the test code coverage provided by automated tests. See <a href="http://www.artima.com/weblogs/viewpost.jsp?thread=210575">Blog post describing the CRAP metric</a>.
 CRAP.description=Measures the C.R.A.P. (Change Risk Anti-Patterns) score. It is designed to analyze and predict the amount of effort, pain, and time required to maintain an existing body of code.  Given a Java method m, C.R.A.P. for m is calculated as follows: C.R.A.P.(m) = comp(m)^2 * (1 – cov(m)/100)^3 + comp(m). Where comp(m) is the cyclomatic complexity of method m, and cov(m) is the test code coverage provided by automated tests. See http://www.artima.com/weblogs/viewpost.jsp?thread=210575.
 CRAP.total=CRAP (total)
 CRAP.average=CRAP (average)
