--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -60,6 +60,7 @@ EfferentCoupling.description.html=Counts the number of other packages that the c
 EfferentCoupling.description=Counts the number of other packages that the classes in a package depend upon. (Package-level).
 EfferentCoupling.total=Efferent Coupling (total)
 EfferentCoupling.average=Efferent Coupling (average)
+EfferentCoupling.referencedPackages=Efferent Coupling (referenced packages)
 
 FieldCount.description.html=Counts the number of fields within each class.
 FieldCount.description=Counts the number of fields within each class.
