--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -24,6 +24,13 @@ ABC.description=Measures size and complexity of source code. See http://c2.com/c
 ABC.total=ABC (total)
 ABC.average=ABC (average)
 
+AfferentCoupling.description.html=Counts the number of other packages that depend on the classes within a package. (Package-level).
+AfferentCoupling.description=Counts the number of other packages that depend on the classes within a package. (Package-level).
+AfferentCoupling.total=Afferent Coupling (total)
+AfferentCoupling.value=Afferent Coupling
+AfferentCoupling.average=Afferent Coupling (average)
+AfferentCoupling.referencedFromPackages=Afferent Coupling (referenced from packages)
+
 ClassCount.description.html=Counts the number classes within each package.
 ClassCount.description=Counts the number classes within each package.
 ClassCount.total=Classes (total)
@@ -59,6 +66,7 @@ CyclomaticComplexity.average=Complexity (average)
 EfferentCoupling.description.html=Counts the number of other packages that the classes in a package depend upon. (Package-level).
 EfferentCoupling.description=Counts the number of other packages that the classes in a package depend upon. (Package-level).
 EfferentCoupling.total=Efferent Coupling (total)
+EfferentCoupling.value=Efferent Coupling
 EfferentCoupling.average=Efferent Coupling (average)
 EfferentCoupling.referencedPackages=Efferent Coupling (referenced packages)
 
