--- a/src/main/resources/gmetrics-base-messages.properties
+++ b/src/main/resources/gmetrics-base-messages.properties
@@ -29,7 +29,7 @@ AfferentCoupling.description=Counts the number of other packages that depend on 
 AfferentCoupling.total=Afferent Coupling (total)
 AfferentCoupling.value=Afferent Coupling
 AfferentCoupling.average=Afferent Coupling (average)
-AfferentCoupling.referencedFromPackages=Afferent Coupling (referenced from packages)
+AfferentCoupling.referencedFromPackages=Afferent Coupling (from packages)
 
 ClassCount.description.html=Counts the number classes within each package.
 ClassCount.description=Counts the number classes within each package.
@@ -68,7 +68,7 @@ EfferentCoupling.description=Counts the number of other packages that the classe
 EfferentCoupling.total=Efferent Coupling (total)
 EfferentCoupling.value=Efferent Coupling
 EfferentCoupling.average=Efferent Coupling (average)
-EfferentCoupling.referencedPackages=Efferent Coupling (referenced packages)
+EfferentCoupling.referencedPackages=Efferent Coupling (to packages)
 
 FieldCount.description.html=Counts the number of fields within each class.
 FieldCount.description=Counts the number of fields within each class.
